# readme-validator

./: main.py  pyproject.toml
sample/: exemplar-README.md
