[tool.poetry]
name = "readme-validator"
version = "0.1.0"
description = ""
authors = ["Shekhar Patnaik <patnaikshekhar@gmail.com>"]
readme = "README.md"
packages = [{include = "readme_validator"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.195"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
